{
    "name": "InputSystem_Actions",
    "maps": [
        {
            "name": "Player",
            "id": "85c4a817-eac2-4305-a042-f8bfef3ee184",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "a9f54b0f-ecf6-4191-8e94-538f5d5f042a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InputAction",
                    "type": "Button",
                    "id": "14d78eb8-7d1a-478b-b198-8c2bab439678",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KillSelf",
                    "type": "Button",
                    "id": "3af5d74e-f4fd-4f93-8607-03a3d46f93af",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FinishGame",
                    "type": "Button",
                    "id": "d2152ebf-19d4-43ef-ab4e-0fb523247055",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ba636221-dda9-453b-9597-75a3f4ec168b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f4cc849-7063-4734-bdbb-1f8714dd8b03",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "InputAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de96a9a4-d92b-4907-b97f-8a7aeeddf768",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KillSelf",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82560ba9-fc8b-4037-b3d7-9a1d131f34d9",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FinishGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuPlayer",
            "id": "0f280892-a7a8-459c-92d2-7598a6191637",
            "actions": [
                {
                    "name": "StartGame",
                    "type": "Button",
                    "id": "bc90074a-7ca3-4e30-96aa-a45deba2965b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Bubble",
                    "type": "Button",
                    "id": "29428d91-bb1e-44a9-8bbe-85bbfcc778fe",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aff4f26f-8f6c-4332-88aa-c32b69ad5ec8",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b806f978-65ec-4dd7-bcae-e75a8f0f078f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Bubble",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}